Replace Process with ProcessBuilder to start Webots in external_controller apps